prow/cluster/components/05-prow-controller-manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: prow-controller-manager
  labels:
    app: prow-controller-manager
spec:
  selector:
    matchLabels:
      app: prow-controller-manager
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prow-controller-manager
    spec:
      serviceAccountName: "s3-prow-controller-manager"
      containers:
        - name: prow-controller-manager
          image: gcr.io/k8s-prow/prow-controller-manager:v20200916-29e367bb39
          args:
            - --dry-run=false
            - --config-path=/etc/config/config.yaml
            - --job-config-path=/etc/job-config
            - --enable-controller=plank
            - --kubeconfig=/etc/kubeconfig/config
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: job-config
              mountPath: /etc/job-config
              readOnly: true
            - name: kubeconfig
              mountPath: /etc/kubeconfig
              readOnly: true
      volumes:
        - name: kubeconfig
          secret:
            defaultMode: 0644
            secretName: kubeconfig
        - name: config
          configMap:
            name: config
        - name: job-config
          configMap:
            name: job-config
