prow/cluster/components/07-deck.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: deck
  labels:
    app: deck
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: deck
  template:
    metadata:
      labels:
        app: deck
    spec:
      serviceAccountName: "s3-deck"
      terminationGracePeriodSeconds: 30
      containers:
        - name: deck
          image: gcr.io/k8s-prow/deck:v20200715-6a0bba187f
          args:
            - --allow-insecure
            - --github-oauth-config-file=/etc/githuboauth/secret
            - --hook-url=http://hook:8888/hook
            - --config-path=/etc/config/config.yaml
            - --job-config-path=/etc/job-config
            - --kubeconfig=/etc/kubeconfig/config
            - --plugin-config=/etc/plugins/plugins.yaml
            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
            # - --github-token-path=/etc/github/oauth
            - --spyglass=true
            - --oauth-url=/github-login
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: job-config
              mountPath: /etc/job-config
              readOnly: true
            # - name: oauth-token
            #   mountPath: /etc/github
            #   readOnly: true
            - name: plugins
              mountPath: /etc/plugins
              readOnly: true
            - name: branding
              mountPath: /static/extensions
              readOnly: true
            - name: kubeconfig
              mountPath: /etc/kubeconfig
              readOnly: true
            - name: oauth-config
              mountPath: /etc/githuboauth
              readOnly: true
            - name: cookie-secret
              mountPath: /etc/cookie
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 3
            timeoutSeconds: 600
      volumes:
        - name: kubeconfig
          secret:
            defaultMode: 0644
            secretName: kubeconfig
        - name: oauth-config
          secret:
              secretName: github-oauth-config
        - name: cookie-secret
          secret:
              secretName: cookie
        - name: config
          configMap:
            name: config
        - name: job-config
          configMap:
            name: job-config
        # - name: oauth-token
        #   secret:
        #       secretName: oauth-token
        - name: plugins
          configMap:
            name: plugins
        - name: branding
          configMap:
            defaultMode: 420
            name: branding
