prow/cluster/components/10-prow_addons_ctrlmanager.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prow-addons-ctrl-manager
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
  name: prow-addons-controller-manager-service
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: prow-addons-ctrl-manager
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: prow-addons-ctrl-manager
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
  name: prow-addons-controller-manager
  namespace: default
spec:
  selector:
    matchLabels:
      app: prow-addons-ctrl-manager
      control-plane: controller-manager
      controller-tools.k8s.io: "1.0"
  serviceName: prow-addons-controller-manager-service
  template:
    metadata:
      labels:
        app: prow-addons-ctrl-manager
        control-plane: controller-manager
        controller-tools.k8s.io: "1.0"
    spec:
      containers:
        - command:
            - /manager
          image: eu.gcr.io/kyma-project/test-infra/develop/prow-addons-ctrl-manager:6803bbf3
          imagePullPolicy: Always
          name: manager
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 20Mi
      serviceAccountName: prow-addons-controller-manager
      terminationGracePeriodSeconds: 10
  volumeClaimTemplates: []
